# windows-shutdown

./: .clang-format  .editorconfig  .gitignore  CHANGELOG  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  LICENSE  Makefile  README.md  README_ZH.md  check-ctrl.py  package.json  setup_env_and_vscode.bat  to-utf8-lf.py  windows-shutdown.sln  windows-shutdown.slnx
scripts/: check-ctrl.py  make-icon.py  to-utf8bom.py
windows-shutdown/: RCa26680  README.md  alias.h  app-page.h  app-state.h  app.config.cpp  app.config.h  app.core.h  app.event.h  app.i18n.cpp  app.i18n.h  app.page.h  app.state.h  bitmap-loader.cpp  bitmap-loader.h  components.instruction.cpp  components.instruction.h  components.menu-button.cpp  components.menu-button.h  components.nixie-tube-clock.cpp  components.nixie-tube-clock.h  components.warning.cpp  components.warning.h  config-parser.cpp  config-parser.h  config.cpp  config.h  consts.app.h  consts.config.h  consts.h  consts.warning.h  controller.cpp  controller.h  countdown.cpp  countdown.h  donate.cpp  donate.h  dtm.cpp  dtm.h  event.cpp  (+49 more)
windows-shutdown/components/: a.cpp  a.h  config-warning.cpp  config-warning.h  div.cpp  div.h  instruction.cpp  instruction.h  menu-button.cpp  menu-button.h  nixie-tube-clock.cpp  nixie-tube-clock.h  warning.cpp  warning.h
windows-shutdown/consts/: button-style.h  color-set.h  configure.h  core.h  effects.h  font-style.h  state.h  util.h
windows-shutdown/views/: app.h  countdown.cpp  countdown.h  donate.cpp  donate.h  home.cpp  home.h  view.h
